--- a/package.json
+++ b/package.json
@@ -20,8 +20,17 @@
   },
   "homepage": "https://github.com/ethanresnick/json-api-mongoose-adapter#readme",
   "devDependencies": {
+    "@types/mongoose": "^5.3.5",
+    "json-api": "^3.0.0-rc.6.0.1",
     "mocha": "^5.2.0",
+    "mongoose": "^4.7.9",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
+  },
+  "peerDependencies": {
+    "mongoose": "^4.7.0"
+  },
+  "dependencies": {
+    "pluralize": "0.0.11"
   }
 }
