--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
     "@types/mongoose": "^5.3.5",
+    "@types/mongoose-geojson-schema": "^2.1.1",
     "chai": "^4.2.0",
     "json-api": "^3.0.0-rc.6.0.1",
     "mocha": "^5.2.0",
     "mongoose": "^4.7.9",
+    "mongoose-geojson-schema": "^2.1.3",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
   },
